31-unsafe/01 第 3 轮深度 REVIEW: 反射绕 theUnsafe 补 JDK11 permit 条件(实测无 --add-opens 可用)/assert_field_offset_sane NULL 跳过(unsafe.cpp:105-118)/defineAnonymousClass JDK17 已移除(实测 Temurin 17 src.zip 零命中)/JDK8 断言软化+putOrdered 内存序精确化;大纲+HANDOFF 同步